# Branitz2

./: .gitignore  QUICK_START_HEINRICH_ZILLE.md  README.md  RESULTS_SUMMARY.md  RUN_CHA_INSTRUCTIONS.md  RUN_CHA_NOW.md  RUN_PIPELINE.md  chapter3.md  checklist2.md  checklist2_data.json  checklist2_elements_data.json  checklist2_sanity_data.json  checklist2_thermal_nan_pipes.csv  cleanup_results.sh  dhachecklist.md  environment.yml  phase5checklist.md  pyproject.toml  pytest.ini  requirements.txt  run_adk_heinrich_zille.py  service-account-file.json  show_results.sh  test_map.html
config/: decision_config_2023.json  decision_config_2030.json  decision_config_aggressive.json
docs/: BRANITZ2_VS_DISTRICTHEATINGSIM_TABLE.md  agent_definitions.md  api_reference.md  architecture.md  cha_heat_loss_implementation_plan.md  cha_implementation_checklist.md  cha_pipeline_flow.md  cha_pipeline_improvements.md  cluster_module_explanation.md  convergence_checking.md  convergence_issues_analysis.md  cost_breakdown_calculations.md  data_dictionary.md  decision_pipeline.md  deployment.md  dha_mitigations_summary.md  dha_violation_mitigation_strategies.md  economics.md  economics_phase4_checklist.md  heinrich_zille_troubleshooting.md  implementation_checklist.md  implementation_summary.md  legacy_implementation_analysis.md  network_building_issues_analysis.md  reason_codes.md  redundant_filtering_analysis.md  residential_building_filter.md  topology.md  trunk_topology_issues_analysis.md  uhdc_output_formats.md  validation_methods.md  workflow_ui_to_agents.md  zero_costs_explanation.md
(+191 files in other folders)
